# calc-api

./: README.md  justfile
calc-java/: pom.xml
calc-java/src/main/java/io/calc/: CalcApplication.java
calc-java/src/main/java/io/calc/controller/: CalcController.java
calc-java/src/main/java/io/calc/nativex/: Calc.java
calc-java/src/main/java/io/calc/service/: CalcService.java
calc-java/src/test/java/io/calc/: AppTest.java
calc-lib/: CMakeLists.txt  README.md
calc-lib/include/: calc.h  vbLicense.h
calc-lib/include/java/: calc.h
calc-lib/src/: main.cpp
calc-lib/src/lib/: calcImpl.cpp  vbLicense.cpp
calc-lib/src/lib/java/: calc.cpp
calc-node/: .gitignore  CMakeLists.txt  package.json  source.md  tsconfig.json
calc-node/addons/: CalcNapi.cxx  CalcNapi.hxx  addon.cxx
calc-node/libs/: libcalc.lib  node.lib
calc-node/src/: bindings.js  bindings.ts  index.js  index.ts  server.js  server.ts
calc-wrapper/: CMakeLists.txt  README.md
calc-wrapper/include/: calc.h  wrapper.h
calc-wrapper/libs/: calc.lib
calc-wrapper/src/: main.cpp  wrapper.cpp
electron-app/: .gitignore  DEV-SETUP.md  electron-builder.json  nodemon.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
electron-app/public/: index.html
electron-app/src/electron/: calc-napi.node  main.js  preload.js
electron-app/src/renderer/: index.tsx
electron-app/src/renderer/components/: App.css  App.tsx
electron-app/src/renderer/components/About/: About.css  About.tsx
electron-app/src/renderer/components/ContentFrame/: ContentFrame.css  ContentFrame.tsx
electron-app/src/renderer/components/Footer/: Footer.css  Footer.tsx
electron-app/src/renderer/components/Header/: Header.css  Header.tsx
electron-app/src/renderer/components/Header/Navbar/: Navbar.css  Navbar.tsx
electron-app/src/renderer/components/Home/: Home.tsx
electron-app/src/renderer/components/Login/: Login.tsx
electron-app/src/renderer/components/RepoList/: RepoList.tsx
electron-app/src/renderer/styles/: dark-theme.css
electron-app/src/renderer/types/: electron.d.ts  window.d.ts
electron-app/src/types/: webpack.d.ts
